Working recipe viewer for espresso, changed around some GUI things